--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "stimulus": "^1.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
