--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
+    "rails-ujs": "^5.2.2",
     "stimulus": "^1.1.0"
   },
   "devDependencies": {
