--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "rails-ujs": "^5.2.2",
-    "stimulus": "^1.1.0"
+    "stimulus": "^1.1.0",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
