--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "popper.js": "^1.14.6",
     "rails-ujs": "^5.2.2",
     "stimulus": "^1.1.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "typed.js": "^2.0.9"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
